--- a/07_dom-basics-1/index.html
+++ b/07_dom-basics-1/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
+<body style="display: flex; align-items: center;">
 
-  </body>
-  <script src="main.js"></script>
+</body>
+<script src="main.js"></script>
+<script src="typeInput.js"></script>
 
 </html>
