--- a/08_dom-basics-2/index.html
+++ b/08_dom-basics-2/index.html
@@ -9,15 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script defer src="todo-app.js"></script>
     <script>
-<<<<<<< HEAD
         document.addEventListener("DOMContentLoaded", function() {
-            createTodoApp(document.getElementById('todo-app'), 'Мои дела', key = 'Мои дела');
+            createTodoApp(document.getElementById('todo-app'), 'Мои дела', key = 'todoMy');
         });
-=======
-      document.addEventListener("DOMContentLoaded", function() {
-        createTodoApp(document.getElementById('todo-app'), 'Мои дела', 'todoMy');
-      });
->>>>>>> d260483ff3d36b26c2fb2c4203d7728486d77ffe
     </script>
 
     <body>
