--- a/09_const-var-scope/card-game.html
+++ b/09_const-var-scope/card-game.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="main.js"></script>
+    <script defer src="./cardGame.js"></script>
 
     <title>Игра в пары</title>
 
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container" class="container">
     </div>
-</body>
+  </body>
 
 </html>
