--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./bootstrap.min.css">
     <script defer src="./main.js"></script>
 
@@ -18,32 +17,7 @@
     <div id="container" class="container mb-5">
         <div id="filter"></div>
         <div id="table"></div>
-        <div id="formWrapper">
-            <div class="mb-3">
-                <label for="f_name" class="form-label"></label>
-                <input class="form-control" type="text" id="f_name" placeholder="Фамилия">
-            </div>
-            <div class="mb-3">
-                <label for="name" class="form-label"></label>
-                <input class="form-control" type="text" id="name" placeholder="Имя">
-            </div>
-            <div class="mb-3">
-                <label for="s_name" class="form-label"></label>
-                <input class="form-control" type="text" id="s_name" placeholder="Отчество">
-            </div>
-            <div class="mb-3">
-                <label for="d_birthday" class="form-label"></label>
-                <input class="form-control" type="date" id="d_birthday" placeholder="Дата рождения">
-            </div>
-            <div class="mb-3">
-                <label for="s_education" class="form-label"></label>
-                <input class="form-control" type="number" id="s_education" placeholder="Год начала обучения">
-            </div>
-            <div class="mb-3">
-                <label for="faculty" class="form-label"></label>
-                <input class="form-control" type="text" id="faculty" placeholder="Факультет">
-            </div>
-        </div>
+        <div id="formWrapper"></div>
     </div>
 
 </body>
