--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./main.js"></script>
 
     <title>Document</title>
@@ -17,7 +18,37 @@
     <div id="container" class="container mb-5">
         <div id="filter"></div>
         <div id="table"></div>
-        <div id="formWrapper"></div>
+        <div id="formWrapper">
+            <form id="form">
+                <label class="form-label" for="fName"></label>
+                <div class="input-group mb-3">
+                    <input id="fName" type="text" placeholder="Фамилия">
+                </div>
+                <label class="form-label" for="name"></label>
+                <div class="input-group mb-3">
+                    <input id="name" type="text" placeholder="Имя">
+                </div>
+                <label class="form-label" for="sName"></label>
+                <div class="input-group mb-3">
+                    <input id="sName" type="text" placeholder="Отчество">
+                </div>
+                <label class="form-label" for="birthDate"></label>
+                <div class="input-group mb-3">
+                    <input id="birthDate" type="date" placeholder="Дата рождения">
+                </div>
+                <label class="form-label" for="sEducation"></label>
+                <div class="input-group mb-3">
+                    <input id="sEducation" type="number" placeholder="Год начала обучения">
+                </div>
+                <label class="form-label" for="faculty"></label>
+                <div class="input-group mb-3">
+                    <input id="faculty" type="text" placeholder="Факультет">
+                </div>
+                <div class="input-group mb-3">
+                    <button id="btnSub" class="btn btn-primary">Добавить студента</button>
+                </div>
+            </form>
+        </div>
     </div>
 
 </body>
