--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -19,7 +19,7 @@
         <div id="filter"></div>
         <div id="table"></div>
         <div id="formWrapper">
-            <form id="form">
+            <form id="form" autocomplete="off">
                 <div class="input-group mb-3">
                     <input class="form__input form-control" id="surname" type="text" placeholder="Фамилия">
                 </div>
@@ -43,6 +43,10 @@
                 </div>
             </form>
         </div>
+        <script src="./just-validate.production.min.js"></script>
+        <script src="./just-validate-plugin-date.production.min.js"></script>
+        <script>
+        </script>
     </div>
 </body>
 
