--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -14,39 +14,40 @@
 </head>
 
 <body>
-
     <div id="container" class="container mb-5">
         <div id="filter"></div>
         <div id="table"></div>
         <div id="formWrapper">
             <form id="form" autocomplete="off">
                 <div class="input-group mb-3">
+                    <label class="label" for="surname"></label>
                     <input class="form__input form-control" id="surname" type="text" placeholder="Фамилия">
                 </div>
                 <div class="input-group mb-3">
+                    <label class="label" for="fName"></label>
                     <input class="form__input form-control" id="fName" type="text" placeholder="Имя">
                 </div>
                 <div class="input-group mb-3">
+                    <label class="label" for="sName"></label>
                     <input class="form__input form-control" id="patronymic" type="text" placeholder="Отчество">
                 </div>
                 <div class="input-group mb-3">
-                    <input class="form__input form-control" id="birthDate" type="date" placeholder="Дата рождения">
+                    <label class="label" for="birth"></label>
+                    <input class="form__input form-control" id="birth" type="date" placeholder="Дата рождения">
                 </div>
                 <div class="input-group mb-3">
-                    <input class="form__input form-control" id="sEducation" type="number" onkeypress="this.value=this.value.substring(0,3);" placeholder="Год начала обучения">
+                    <label class="label" for="sEducation"></label>
+                    <input class="form__input form-control" id="sEducation" type="number" onkeypress="this.value=this.value.substring(0,3);" min="2000" placeholder="Год начала обучения">
                 </div>
                 <div class="input-group mb-3">
+                    <label class="label" for="faculty"></label>
                     <input class="form__input form-control" id="faculty" type="text" placeholder="Факультет">
                 </div>
                 <div class="input-group mb-3">
-                    <button id="btnSub" class="btn btn-primary">Добавить студента</button>
+                    <button id="btnSub" class="btn btn-primary" type="button">Добавить студента</button>
                 </div>
             </form>
         </div>
-        <script src="./just-validate.production.min.js"></script>
-        <script src="./just-validate-plugin-date.production.min.js"></script>
-        <script>
-        </script>
     </div>
 </body>
 
