--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -28,7 +28,7 @@
                     <input class="form__input form-control" id="fName" type="text" placeholder="Имя">
                 </div>
                 <div class="input-group mb-3">
-                    <label class="label" for="sName"></label>
+                    <label class="label" for="patronymic"></label>
                     <input class="form__input form-control" id="patronymic" type="text" placeholder="Отчество">
                 </div>
                 <div class="input-group mb-3">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="input-group mb-3">
                     <label class="label" for="sEducation"></label>
-                    <input class="form__input form-control" id="sEducation" type="number" onkeypress="this.value=this.value.substring(0,3);" min="2000" placeholder="Год начала обучения">
+                    <input class="form__input form-control" id="sEducation" type="number" onkeypress="this.value=this.value.substring(0,3);" placeholder="Год начала обучения">
                 </div>
                 <div class="input-group mb-3">
                     <label class="label" for="faculty"></label>
