--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -21,7 +21,7 @@
             <form id="form" autocomplete="off">
                 <div class="input-group mb-3">
                     <label class="label" for="surname"></label>
-                    <input class="form__input form-control" id="surname" type="text" placeholder="Фамилия">
+                    <input class="form__input form-control" id="surname" type="text" required placeholder="Фамилия">
                 </div>
                 <div class="input-group mb-3">
                     <label class="label" for="fName"></label>
