--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -49,7 +49,17 @@
             </div>
             <div id="filter"></div>
         </div>
-        <table id="table"></table>
+        <table id="table" class="table table-bordered">
+            <thead class="thead">
+                <tr class="table-primary">
+                    <th class="sort surname">ФИО</th>
+                    <th class="sort birthdate">Дата рождения</th>
+                    <th class="sort education">Годы обучения и номер курса</th>
+                    <th class="sort faculty">Факультет</th>
+                </tr>
+            </thead>
+            <tbody class="tbody"></tbody>
+        </table>
     </div>
 </body>
 
