--- a/10_type-transform/index.html
+++ b/10_type-transform/index.html
@@ -44,10 +44,10 @@
             </div>
             <div id="filter">
                 <h class="title">Фильтр студентов</h>
-                <input id="fullnameF" class="fullnameF form-control" type="text" placeholder="ФИО">
-                <input id="birthF" class="birthF form-control" type="date" placeholder="Дата рождения">
-                <input id="sEducationF" class="sEducationF form-control" type="number" placeholder="Год начало обучения">
-                <input id="facultyF" class="facultyF form-control" type="text" placeholder="Факультет">
+                <input id="fullnameF" class="fullnameF form-control filtred" type="text" placeholder="ФИО">
+                <input id="birthF" class="birthF form-control filtred" type="date" placeholder="Дата рождения">
+                <input id="sEducationF" class="sEducationF form-control filtred" type="number" placeholder="Год начало обучения">
+                <input id="facultyF" class="facultyF form-control filtred" type="text" placeholder="Факультет">
                 <button id="btnFilter" class="btn btn-primary" type="button">Сбросить</button>
             </div>
         </div>
