--- a/11_client-server/blog-server/list-blogs.html
+++ b/11_client-server/blog-server/list-blogs.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container__blogs" class="container mb-5">
+        <nav id="nav__pages" aria-label="Page navigation example">
+            <ul id="list__pages" class="pagination pagination-sm" style="display: flex; flex-wrap: wrap; justify-content: center;">
+            </ul>
+        </nav>
+
     </div>
 </body>
 
