--- a/11_client-server/blog-server/index.html
+++ b/11_client-server/blog-server/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./main.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <div id="container__posts" class="container">
-
+    <div id="container__blogs" class="container mb-5">
+        <ul class="pages-list pagination pagination-sm" style="flex-wrap: wrap; justify-content: center;"></ul>
+        <ul class="posts-list row"></ul>
     </div>
 </body>
 
