--- a/11_client-server/blog-server/index.html
+++ b/11_client-server/blog-server/index.html
@@ -13,9 +13,14 @@
 
 <body>
     <div id="container__blogs" class="container mb-5">
-        <ul class="pages-list pagination pagination-sm" style="flex-wrap: wrap; justify-content: center;"></ul>
+        <nav id="demo" class="demo">
+            <ul class="pages-list pagination pagination-sm" style="flex-wrap: wrap; justify-content: center;"></ul>
+        </nav>
         <ul class="posts-list row"></ul>
     </div>
+
+    <script>
+    </script>
 </body>
 
 </html>
