--- a/11_client-server/blog-server/post.html
+++ b/11_client-server/blog-server/post.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <div id="container__coments" class="container">
-        <div id="post__content"></div>
-        <div id="post__comment"></div>
+    <div class="item-post">
+
     </div>
+
+    <ul class="comments-list">
+        <h2 class="comments-list__title">Комментарии:</h2>
+
+    </ul>
 </body>
 
 </html>
