--- a/11_client-server/blog-server/index.html
+++ b/11_client-server/blog-server/index.html
@@ -13,14 +13,13 @@
 
 <body>
     <div id="container__blogs" class="container mb-5">
-        <nav id="demo" class="demo">
+        <nav>
             <ul class="pages-list pagination pagination-sm" style="flex-wrap: wrap; justify-content: center;"></ul>
+            <div class="number-page">Страница</div>
         </nav>
         <ul class="posts-list row"></ul>
     </div>
 
-    <script>
-    </script>
 </body>
 
 </html>
