--- a/11_client-server/blog-server/index.html
+++ b/11_client-server/blog-server/index.html
@@ -13,9 +13,15 @@
 
 <body>
     <div id="container__blogs" class="container mb-5">
+        <div class="paginatio">
+            <button class="btn btn-primary prev">Предыдущая страница</button>
+            <div class="number-page">Страница</div>из
+            <div class="last-page"></div>
+            <button class="btn btn-primary next">Следующая страница</button>
+        </div>
         <nav>
             <ul class="pages-list pagination pagination-sm" style="flex-wrap: wrap; justify-content: center;"></ul>
-            <div class="number-page">Страница</div>
+
         </nav>
         <ul class="posts-list row"></ul>
     </div>
